--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-{% load static %}
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -17,7 +16,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
    <div class="container">
-       <a class="navbar-brand" href="#">Django flatpages</a>
+       <a class="navbar-brand" href="{% static # '}">Django flatpages</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse"
                data-target="#navbarResponsive"
                aria-controls="navbarResponsive" aria-expanded="false"
@@ -27,18 +26,18 @@
        <div class="collapse navbar-collapse" id="navbarResponsive">
            <ul class="navbar-nav ml-auto">
                <li class="nav-item active">
-                   <a class="nav-link" href="#">Home
+                   <a class="nav-link" href="{% static # %}">Home
                        <span class="sr-only">(current)</span>
                    </a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="/about/">About</a>
+                   <a class="nav-link" href="{% static /about/ %}">About</a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="/contacts/">Contact</a>
+                   <a class="nav-link" href="{% static /contacts/ %}">Contact</a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="/hohoho/">Click me please</a>
+                   <a class="nav-link" href="{% /hohoho/ %}">Click me please</a>
                </li>
            </ul>
        </div>
