--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -37,7 +37,7 @@
                    <a class="nav-link" href="{% static /contacts/ %}">Contact</a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" href="{% /hohoho/ %}">Click me please</a>
+                   <a class="nav-link" href="{% static /hohoho/ %}">Click me please</a>
                </li>
            </ul>
        </div>
